# TFG_AIWantTheJob

./: README.md  pyproject.toml  requirements.txt
Documentacion/: LogsRiesgos.xlsx  MatrizTrazabilidadRequisitos.xlsx  PlanPruebasTFG.docx  riesgosTFG.xlsx
Test/: README.md
Test/integration/: CalidadRespuestas.xlsx  NoCuantEvals.csv  NoCuantpreguntas.csv  NoCuantrespuestas.csv  a_comparar_cuant_nocuant.ipynb  ejemplos4bit.csv  test_QA_4bit_TyQ.ipynb  test_QA_NoCuant_TyQ.ipynb  test_api_com.ipynb  test_db.ipynb  test_ftp_com.ipynb  test_generic_llm.ipynb  test_nemo_core.ipynb  test_proxy.ipynb  test_rag.ipynb
Test/unit/: test_api.py  test_api_helper.py  test_cache.py  test_database.py  test_file_reader.py  test_ftp_client.py  test_ftp_server.py  test_generic_llm.py  test_main_start.py  test_nemo_config.py  test_nemo_core.py  test_number_grabber.py  test_parser.py  test_prompt_templates.py  test_proxy.py  test_rag.py
Test/usability/: README.md  a_comparar_cuant_nocuant.ipynb  mocked_index.py  run.sh  setup.py
backend/: README.md  main.py  setup.py
backend/api/: api.py
backend/database/: database.py
backend/helpers/: ftpserver.py  number_graber.py  parser.py
backend/modelo_ia/: engine_proxy.py  generic_llm.py  nemo_config.py  nemo_core.py  prompt_templates.py  pseudo_cache.py  vector_store.py
frontend/: README.md  index.py  setup.py
frontend/helpers/: api_functions.py  file_reader.py  ftpclient.py
sandbox/Api-health-checks/: api.py  checks.ipynb  (+1 more)
scripts/: README.md  build.sh  conda_install.sh  model_preload.py  no_env_run.sh  run.sh  stop.sh
(+16 files in other folders)
