[tool.poetry]
package-mode = false
name = "AIWantTheJob"
version = "1.0"
description = "ChatBot + Frontend to develop a interview system"
authors = ["Jorge Alcalde Vesteiro <jorge.alcalde@rai.usc.es>"]

[tool.poetry.dependencies]
python = "3.11"
streamlit = "^1.35.0"
streamlit_chat = "^0.1.1"
pandas = "^2.0.2"
numpy = "^1.24.3"

flask = "^3.0.3"
flask_cors = "^4.0.1"
torch = "^2.3.1"
transformers = "^4.41.2"
huggingface_hub = "^0.23.3"
langchain = "0.1.7"
langchain_community = "0.0.20"
langchain_core = "0.1.23"
langchain-text-splitters = "^0.2.1"
nemoguardrails = "^0.9.0"
chromadb = "^0.5.0"
pyftpdlib = "^1.5.0"
sentence-transformers = "^3.0.1"
bitsandbytes = "^0.43.1"
accelerate = "^0.31.0"
ipykernel = "^6.29.3"
ipython = "^8.22.2"
ipywidgets = "^8.1.3"
matplotlib = "^3.9.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-asyncio = "^0.23.7"

[tool.poetry.group.test.dependencies]
pytest-asyncio = "^0.23.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"